# ASIoP-ML-ZDC

./: .gitignore  README.md  environment.yml  inference.py  pyproject.toml  requirements.txt  submit_a100.sh  train.py
20260324_neutron_LYSO_diffAngle/: Comparison_Results.root  res2_1_m0_w0_neutron.root  res2_1_m1_w1_neutron.root  res3_2_fitLayerPM35_neutron2.root  res3_2_fitLayerPM35_neutron4.root  res3_2_fitLayerPM35_neutron7.root  res3_2_fitLayerPM64_neutron7.root  res3_2_neutron2.root  res3_2_neutron4.root  res3_2_neutron6.root  res3_2_wByNhitAndE_fitLayer35_neutron7.root  res3_2_wByNhit_fitLayer15_neutron7.root  res3_2_wByNhit_fitLayer5_neutron7.root  steering_neutron2.py  steering_neutron3.py  steering_neutron6.py  steering_neutron7.py
20260421_gamma_LYSO_diffAngle/: res2_1_m0_w0_gamma.root  res2_1_m0_w1_gamma.root  res2_1_m0_w2_gamma.root  res2_1_m1_w1_gamma.root  res2_1_m1_w2_gamma.root  res2_1_m2_w2_gamma.root  res3_2_fitLayerPM200_gamma100MeV.root  res3_2_fitLayerPM200_gamma20GeV.root  res3_2_fitLayerPM200_gamma30GeV.root  res3_2_fitLayerPM200_gamma40GeV.root  res3_2_fitLayerPM200_gamma500MeV.root  res3_2_fitLayerPM200_gamma5GeV.root  res3_2_fitLayerPM200_gamma700MeV.root  res3_2_fitLayerPM200_gamma900MeV.root  res3_2_fitLayerPM200_gamma9GeV.root  steering_gamma300MeV.py  steering_gamma40GeV.py  steering_gamma7GeV.py
archive/: debug_regression.C  inspect_deep.C  inspect_files.C  inspect_raw.C  inspect_raw2.C  inspect_raw3.C  inspect_root_out.C  plot_from_raw.C  plot_slide5_energy_dump.C  plot_slide6_erec_dist.C  run_all.sh
configs/: a100_neutron.yaml  (+2 more)
(+150 files in other folders)
